src/test/deca/context/invalid/if_string.deca
/*
    Description : Utilisation d'un string au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x = 2;
    if ("aaa"){
        x = 2;
    }
}
